remover ref. to missing figure

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -1001,8 +1001,7 @@ parameters are applied, as for example in mSUGRA scenarios.
 
 In \fs the boundary conditions, imposed on the model parameters, are
 (at the C++ level) classes which implement the common
-\code{Constraint<Two\_scale>} interface, see
-\figref{fig:schematic-two-scale-constraint-interface}.
+\code{Constraint<Two\_scale>} interface:
 %
 \begin{lstlisting}[language=C++]
 template<>
